# magma

./: .pwnhunter-gemini-chat-id  CODEOWNERS  WORKSPACE.bazel  mypy.ini  trigger.js  trigger.tf
.devcontainer/: Dockerfile
.github/workflows/: agw-build-publish-container.yml  agw-coverage.yml  agw-workflow.yml  autolabel-pullrequests.yml  backport-pull-request.yml  bazel.yml  build_all.yml  check-rebase.yml  cloud-workflow.yml  codeowners-syntax.yml  codeql-analysis.yml  comment-pr-on-check-failure.yml  cwag-workflow.yml  cwf-integ-test.yml  cwf-operator.yml  dco-check.yml  debian-packages-promote.yml  docker-builder-devcontainer.yml  docker-builder-python-precommit.yml  docker-promote.yml  docs-workflow.yml  docusaurus-workflow.yml  dp-workflow.yml  federated-integ-test.yml  feg-workflow.yml  fossa-workflow.yml  golang-check-version.yml  helm-chart-dependency-check.yml  helm-deploy-on-demand.yml  helm-promote.yml  insync-checkin.yml  lte-integ-test-bazel-magma-deb.yml  magma-build-3rd-party.yml  magma-build-openvswitch.yml  magma-publish-go.yml  nms-workflow.yml  pr_bot.yml  python-workflow.yml  reviewdog-workflow.yml  semantic-pr.yml  (+2 more)
.github/workflows/scripts/: golang_check_version.sh
bazel/scripts/: check_py_bazel.sh
cwf/cloud/go/: go.mod  go.sum
cwf/gateway/: go.mod  go.sum
cwf/gateway/docker/go/: Dockerfile
cwf/k8s/cwf_operator/: go.mod  go.sum
cwf/k8s/cwf_operator/docker/: Dockerfile
docs/readmes/resources/: ref_useful_links.md
dp/cloud/go/: go.mod  go.sum
dp/cloud/python/magma/configuration_controller/: requirements.txt
dp/cloud/python/magma/configuration_controller/tests/: requirements.txt
dp/cloud/python/magma/db_service/: requirements.txt
dp/cloud/python/magma/db_service/tests/: requirements.txt
dp/cloud/python/magma/radio_controller/: requirements.txt
dp/cloud/python/magma/radio_controller/tests/: requirements.txt
dp/cloud/python/magma/test_runner/: requirements.txt
dp/tools/fake_crl/: main.py  requirements.txt
dp/tools/fake_sas/: fake_sas.py  sas_interface.py
dp/tools/harness/: requirements.txt
feg/cloud/go/: go.mod  go.sum
feg/cloud/go/protos/: go.mod  go.sum
feg/gateway/: go.mod  go.sum
feg/gateway/docker/go/: Dockerfile
feg/gateway/services/envoy_controller/control_plane/: control_plane.go
feg/radius/lib/go/http/: go.mod
feg/radius/lib/go/libgraphql/: go.mod
feg/radius/lib/go/log/: go.mod
feg/radius/lib/go/machine/: go.mod
feg/radius/lib/go/oc/: go.mod  go.sum
feg/radius/lib/go/oc/helpers/: go.mod
feg/radius/src/: go.mod  go.sum
lte/cloud/go/: go.mod  go.sum
lte/gateway/docker/ghz/: Dockerfile
lte/gateway/ebpf/bpf/: Makefile  gtp_decap.c  gtp_encap.c  gtp_maps.h  gtp_mark.c
lte/gateway/ebpf/python/: ebpf_gtp_manager.py  ebpf_sessiond_integration.py  ebpf_utils.py
lte/gateway/ebpf/src/: sessiond_pfcp_adapter.c
lte/gateway/python/: setup.py
lte/gateway/python/magma/mobilityd/: ip_address_man.py  ip_allocator_base.py  ip_allocator_dhcp.py  ip_allocator_multi_apn.py  ip_allocator_pool.py  ip_allocator_static.py  ip_descriptor_map.py
lte/gateway/python/magma/pipelined/: service_manager.py
lte/gateway/python/magma/pipelined/app/: policy_mixin.py
lte/gateway/python/magma/pipelined/ebpf/: ebpf_gtp_decap.c  ebpf_gtp_encap.c  ebpf_gtp_manager.py  ebpf_gtp_veth0_mark.c
lte/gateway/python/magma/pipelined/qos/: tc_ops.py
nms/: package.json  trigger.js
orc8r/cloud/api/v1/go/: go.mod  go.sum
orc8r/cloud/deploy/orc8r_deployer/docker/: Dockerfile
orc8r/cloud/docker/controller/: Dockerfile
orc8r/cloud/go/: go.mod  go.sum
orc8r/cloud/go/services/analytics/query_api/: query_api.go
orc8r/cloud/go/services/analytics/query_api/mocks/: PrometheusAPI.go
orc8r/cloud/go/services/metricsd/prometheus/handlers/: promo_handlers.go
orc8r/cloud/go/services/metricsd/prometheus/handlers/cache/: series_cache.go
orc8r/cloud/go/services/metricsd/prometheus/handlers/mocks/: PrometheusAPI.go  SeriesAPI.go
orc8r/cloud/test/: go.mod  go.sum
orc8r/gateway/go/: go.mod  go.sum
orc8r/gateway/python/: setup.py
orc8r/gateway/python/scripts/: register.py
orc8r/lib/go/: go.mod  go.sum
orc8r/lib/go/protos/: go.mod  go.sum
